--- a/rc-defination.yaml
+++ b/rc-defination.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: myapp
-  labels: 
-    app: my-app
-    type: front-end
 spec:
+  replicas: 2
+  selector:
+    app: myapp
   template:
     metadata:
       name: myapp
@@ -15,6 +15,7 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: nginx:latest
-replicas: 3          
-            
+          image: nginx
+          ports: 
+          - containerPort: 80
+          
